Update ignore to prevent leaking classwork

--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,4 @@ TSWLatexianTemp*
 # Exclude actual lab papers from being uploaded to the repo, to avoid code of conduct violation.
 ./actualLabWork/*
 ./actualLabWork/
+actualLabWork
